# aplicacion-python

./: Dockerfile  README.md  pyproject.toml  test_basico.py
.github/workflows/: main.yml
