[tool.poetry]
name = "mi-aplicacion"
version = "0.1.0"
description = "Aplicación con CI/CD"
authors = ["Juan Jose Suarez jsuarebu@emeal.nttdata.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0" 

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
poetry = "^1.7.1" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
